--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "start-server": "npm start",
+    "cy:run-component": "cypress run --component",
+    "cy:run": "cypress run",
+    "cy:ci": "start-server-and-test start-server http://localhost:3000 cy:run"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -21,11 +25,13 @@
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
+    "cypress": "^12.17.1",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.26",
+    "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.0"
   }
