--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "react-scripts test",
-    "start-server": "npm start",
     "cy:run-component": "cypress run --component",
+    "start-server": "npm run dev",
     "cy:run": "cypress run",
     "cy:ci": "start-server-and-test start-server http://localhost:3000 cy:run"
   },
